--- a/Todo.Application/Todo.Application.csproj
+++ b/Todo.Application/Todo.Application.csproj
@@ -19,10 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Todos\CreateTodo\" />
     <Folder Include="Features\Todos\DeleteTodoById\" />
-    <Folder Include="Features\Todos\GetAllTodos\" />
     <Folder Include="Features\Todos\UpdateTodoById\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj" />
   </ItemGroup>
 
 </Project>
